# NGCP-Capstone-UGV

./: .gitignore  .gitmodules  README.md  example_wp.qgc
configs/: apm_stack_px4.params
configs/zed-ros-wrapper/: common.yaml
lidar/: main.cpp  plot.py  runlidar.sh
lidar/driver/: Makefile  main.cpp
lidar/output/: data.csv
lidar/vis/: data.csv  data1.csv  plot.py  testData.csv
ros/: .gitignore
ros/scripts/: apm_stack_px4.params  mavparam.sh  set_wp.sh
ros/src/: tf_broadcaster.cpp  tf_listener.cpp
ros/src/bugv/: CMakeLists.txt  README.md  package.xml
ros/src/bugv/launch/: bugv_start.launch  pixhawk_init.launch  rplidar_init.launch  rtabmap.launch  rtabmap.launch.orig  zedm_init.launch
ros/src/bugv/rviz/: bugv_rtabmap_zedm_rplidar.rviz
ros/src/bugv/src/: bugv_control.cpp  bugv_control.h  bugv_logic.cpp  bugv_nav.cpp  bugv_nav.h  manual_rover.cpp
ros/src/bugv/urdf/: bugv.urdf
ros/src/bugv_2dnav/: CMakeLists.txt  costmap_common_params.yaml  move_base.launch  package.xml
ros/src/bugv_2dnav/launch/: bugv_2dnav.launch
ros/src/bugv_nav/: CMakeLists.txt  move_base.launch  package.xml
ros/src/bugv_nav/launch/: apm_config.yaml  bugv_nav.launch
ros/src/bugv_nav/src/: manual_rover.cpp
ros/src/bugv_rtab/: CMakeLists.txt  package.xml
ros/src/bugv_rtab/launch/: bugv_rtab.launch
ros/src/bugv_rtab/urdf/: bugv.urdf
ros/src/bugv_tf/: CMakeLists.txt  package.xml
ros/src/bugv_tf/launch/: bugv_tf.launch  bugv_tf_test.launch
ros/src/bugv_tf/src/: tf_broadcaster.cpp  tf_listener.cpp
ros/src/python_examples/: CMakeLists.txt  package.xml
scripts/: mavcmd.sh  mavparam.sh  set_wp.sh
