<?xml version="1.0"?>
<package format="2">
  <name>bugv_nav</name>
  <version>0.0.1</version>
  <description>The bugv_nav package</description>

  <maintainer email="garana@todo.todo">garana</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>ros</buildtool_depend>

</package>
